| Summary: | ASTERISK-22094: res_sip - transport config object can't be modified on module reload - let the user know | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-17 15:32:16 | Date Closed: | 2013-08-20 09:52:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Trunk | Attachments: | |
| Description: | During run-time the output from a "module reload res_sip.so" command will include:
{noformat} [Jul 4 18:11:03] DEBUG[30972]: res_sorcery_config.c:269 sorcery_config_internal_load: Could not create an object of type 'transport' with id 'simpletrans' from configuration file 'res_sip.conf' {noformat} From what I understand this is because the transport configuration inherently can't be refreshed by only a module reload. A complete Asterisk restart is needed. If you don't know this, then seeing that message when troubleshooting configuration can send you down a wild goose chase. If possible let's add a debug message (or modify the one above if that makes more sense) on module reload of res_sip.so to let the user know that transport configuration can only be reloaded on a complete restart of Asterisk. | ||
| Comments: | |||