Add note to transport configuration that a restart is required to change transports.

(closes issue ASTERISK-22094)
reported by Rusty Newton



git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@397073 65c4cc65-6c06-0410-ace0-fbb531ad65f3